<resources>
    <string name="app_name">Drikkevett</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="custom_pop_up_title">Etterregistrer enhet</string>
    <string name="custom_pop_up_text">Her velger du tiden fra du begynte å drikke til du konsumerte enheten du glemte å registrere</string>
    <string name="explanation_goalreached_text">
        Ønsker du å beholde statistikken din klikk på "Fortsett".\n\n
        Eller du kan ta et skjermbilde av denne skjermen og statistikken blir lagret i galleriet ditt. Det gjør du ved å åpne menyen å klikke på knappen merket \"Skjermbilde\" \n\n
        Ved å klikke på \"Start på nytt\" vil alt av statistikk bli slettet og du kan starte helt på nytt.
    </string>
    <string name="textNewGoal">
        Sett deg en ny ønsket makspromille og \nen ny mål dato
    </string>
    <string name="underPlanParty_DA">
        Her vil du se statistikk over den siste kvelden du har registrert i Planlegg Kvelden.\n\n
        Gjennomfør en kveld for å se statistikk.
    </string>
    <string name="home_guidance_title">Hjem</string>
    <string name="home_guidance_text">
        På hjemskjermen din vil du ha muligheten til å se hvordan du ligger ann med målene dine, sjekke statistikk over dine kvelder og sette et profilbilde
    </string>
    <string name="bac_calc_guidance_title">Promillekalkulator</string>
    <string name="bac_calc_guidance_text">
        Promillekalkulatoren gjør at du kan regne ut promillen din her og nå ved å stille inn antall timer fra start tidspunkt drikking til hvor du tror du er etter så så mange timer
    </string>
    <string name="plan_party_guidance_title">Planlegg Kvelden</string>
    <string name="plan_party_guidance_text">
        Denne funksjonen skal hjelpe deg med å planlegge kvelden din. Du skal kunne legge inn antall enheter du planlegger å drikke for så å "drikke" dem underveis
    </string>
    <string name="day_after_guidance_title">Dagen Derpå</string>
    <string name="day_after_guidance_text">
        Med funksjonen dagen derpå kan du se oversikt over forrige kvelds aktiviteter. Du kan også etterregistrere enheter.
    </string>
    <string name="history_guidance_title">Historikk</string>
    <string name="history_guidance_text">
        Historikken viser en oversikt over alle kveldene du har registrert med applikasjonen. Klikk på en enkelt kveld for mer detaljert data om kvelden din.
    </string>
    <string name="calculation_guidance_title">Utregning</string>
    <string name="calculation_guidance_text">
        Kvinner:
        \nAlkohol i gram / (kroppsvekt i kg x 0,60) - \n(0,15 x timer fra drikkestart) = promille
        \n\nMenn:
        \nAlkohol i gram / (kroppsvekt i kg x 0,70) - \n(0,15 x timer fra drikkestart) = promille
    </string>
    <string name="info_units_guidance_title">Enheter</string>
    <string name="info_widgets_guidance_title">Widgets</string>
    <string name="info_widgets_guidance_text">
        Drikkevett har også en widget som du kan legge til på skrivebordet. Den vil vise informasjon om kvelden du har satt i gang i Planlegg Kvelden
    </string>

    <!--Contact form-->
    <string name="contact_info">Har du spørsmål om rus? Still dem her, eller ring 08588! Alle henvendelser er helt anonyme.\nSvar på spørsmål legges ut på vår nettside. I perioder med mye pågang kan det ta opptil 7 dager før svaret publiseres.</string>
    <string name="contact_info_link"><a href="http://www.rustelefonen.no/besvarte-sporsmal-og-svar">Svarene finner du her!</a></string>
    <string name="information">Opplysninger</string>
    <string name="age">Alder:</string>
    <string name="gender">Kjønn:</string>
    <string name="county">Fylke:</string>
    <string name="question">Spørsmål</string>
    <string name="title">Tittel</string>
    <string name="your_question_hint">Ditt spørsmål</string>
    <string name="send_question">Send spørsmål</string>
</resources>
