<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/cardColor"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:id="@+id/info_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info_link"
                        android:autoLink="web"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/cardColor"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information"
                        android:textColor="@color/textColor"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/age"
                            android:textColor="@color/textColor"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/age_list"
                            android:layout_width="wrap_content"
                            android:minWidth="155dp"
                            android:layout_height="30dp"
                            tools:layout_width="200dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/gender"
                            android:textColor="@color/textColor"/>

                        <Spinner
                            android:id="@+id/gender_list"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:layout_width="200dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/county"
                            android:textColor="@color/textColor"/>

                        <Spinner
                            android:id="@+id/county_list"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:layout_width="200dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/cardColor"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question"
                        android:textColor="@color/textColor"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColor"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/title_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:hint="@string/title"
                            android:inputType="text"
                            android:maxLength="35" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/content_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColor"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/content_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:hint="@string/your_question_hint"
                            android:inputType="textMultiLine" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/submit_form_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_question"
                android:layout_margin="16dp"
                android:textColor="@color/textColor"
                android:foreground="?android:selectableItemBackground"
                android:background="@color/greenSuper" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

